# weather_bot

./: .env_example  Dockerfile  README.MD  docker-compose.yaml  pyproject.toml
app/: bot.py  handlers.py  weather.py
weather-bot/: config_reader.py
